<resources>

    <string name="app_name">Nilo</string>

    <string name="a_adir_al_carrito">Añadir al carrito</string>

    <string name="detail_quantity">Disponibles %1$d</string>
    <string name="detail_total_price">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$.2f)</string>

    <string name="producto_empty_cart">Carrito vacio</string>
    <string name="producto_full_cart">Total: $%1$.2f USD</string>

    <string name="order_id">Id: %1$s</string>
    <string name="order_status">Estado: %1$s</string>

    <string name="order_status_ordered">Pedido</string>
    <string name="order_status_preparing">Preparando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknow">Desconocido</string>
    <string name="order_title">Historial de compras</string>

    <string name="track_title">Rastreo</string>
    <string name="chat_title">Soporte</string>
    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>

    <string name="facebook_application_id" translatable="false">749803416374790</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb749803416374790</string>
    <string name="profile_title">Perfil de usuario</string>
    <string name="prefs_fcm_title">Recibir notificaciones</string>
    <string name="pref_offers_key">pref_offers</string>
    <string name="pref_offers_title">Ofertas y promociones</string>
    <string name="settings_topic_offers">topic_offers</string>


</resources>